# sngtec-telemetrics

./: .gitignore  CMakeLists.txt  config.xml  demo_sngconnect_com.ini  generate-linear-converter-if-else.sh  node_config.xml  root_config.xml  src-structure.txt  staticassert.h  telemetron  telemetron.ini  telemetron.pro  tp-build.sh
UnitTests/: AutoTest.h  UnitTests.pro  main.cpp  sampletest.cpp  sampletest.h  telemetron-test.pro
UnitTests/Cloud/Cosm/: cosmtimetest.h  cosmxmltest.cpp  cosmxmltest.h
UnitTests/Cloud/Pachube/: pachubetimetest.cpp  pachubetimetest.h  pachubexmltest.cpp  pachubexmltest.h
UnitTests/Sensors/Modbus/: modbusframetest.cpp  modbusframetest.h  modbustest.cpp  modbustest.h
UnitTests/Sensors/Sng/: sngmsgcreatortest.cpp  sngmsgcreatortest.h  sngparsertest.cpp  sngparsertest.h  sngphysicaladdresstest.cpp  sngphysicaladdresstest.h  sngtest.h
docs/: konfiguracja.tex
examples/: main.c
examples/pachube/: put_feed.sh
httpconfigurator/: README.txt  Responder.cpp  Responder.h  SetSettingsResponder.cpp  SetSettingsResponder.h  httpconfigurator.cpp  httpconfigurator.h  httpconfigurator.pro
libmodbus/: libmodbus.pro  modbus-private.h  modbus-rtu.c  modbus-tcp.c  modbus.c
scripts/: commServer.py  sendingCommServer.py  sngconnect_signed_api.sh  tcp-pseudodevice.py
src/: CloudFactory.cpp  CloudFactory.h  Configurator2.cpp  Configurator2.h  KeyValueMap.h  SensorFactory.cpp  SensorFactory.h  cloproxy.cpp  cloproxy.h  configurator.cpp  czujnik.cpp  czujnik.h  debug.h  devproxy.cpp  devproxy.h  main.cpp  protocol.cpp  protocol.h  src.pro
src/Cloud/: Cloud.cpp  Cloud.h  DummyCloud.cpp  DummyCloud.h  cloconnection.cpp  cloconnection.h  cloproxy.cpp  cloproxy.h
src/Cloud/Cosm/: cosmcloud.cpp  cosmcloud.h  cosmtime.cpp  cosmtime.h  cosmxml.cpp  cosmxml.h
src/Cloud/Mock/: mockcloud.cpp  mockcloud.h
src/Cloud/Pachube/: pachubecloud.cpp  pachubecloud.h  pachubetime.cpp  pachubetime.h  pachubexml.cpp  pachubexml.h
src/Cloud/TopologyCloud/: topologycloud.cpp  topologycloud.h
src/Cloud/sngconnect/: SNGConnectAPI.cpp  SNGConnectAPI.h  SNGConnectCloud.cpp  SNGConnectCloud.h
src/Configurator/: configurator.cpp  configurator.h
src/LogSender/: logsender.h
src/LogSender/HTTPLogSender/: httplogsender.cpp  httplogsender.h
src/Logger/: logger.cpp  logger.h  loggingHandler.cpp  loggingHandler.h
src/Message/: message.cpp  message.h
src/Sensors/: CommandProcessor.cpp  CommandProcessor.h  DummySensor.cpp  DummySensor.h  Sensor.cpp  Sensor.h  converter.h  convertersfactory.cpp  convertersfactory.h  devconnection.cpp  devconnection.h  devproxy.cpp  devproxy.h  linearconverter.cpp  linearconverter.h
src/Sensors/Mock/: mockdev.cpp  mockdev.h  protocol.cpp  protocol.h  sensor.cpp
src/Sensors/Modbus/: Modbus.cpp  Modbus.h  ModbusSensor.cpp  ModbusSensor.h  crc-count.cpp  crc-count.h  modbus.cpp  modbus.h  modbus_student.cpp  modbus_student.h  modbusrtuframe.cpp  modbusrtuframe.h
src/Sensors/SNG/: sngconnection.cpp  sngconnection.h  sngframe.cpp  sngframe.h  sngmsgcreator.cpp  sngmsgparser.cpp  sngmsgparser.h  sngphysicaladdress.cpp  sngphysicaladdress.h
src/Sensors/Topology/: topologysensor.cpp  topologysensor.h
src/Trash/Pachube/: main.cpp  pachube.cpp  pachube.h  pachube.pro
src/Trash/Pachube-example/: README  main.cpp  pachube.pro
src/Trash/old/: main.cpp
src/Trash/old/Cloud/: Cloud.h  DummyCloud.cpp  DummyCloud.h  cloconnection.h  cloproxy.h
src/Trash/old/Configurator/: configurator.h
src/sha2/: sha2.h
tests/modbusframetest/: modbusframetest.pro  tst_modbusframetesttest.cpp
(+44 files in other folders)
